# Living-Novel

./: .gitignore  README.md  pyproject.toml  requirements.txt
common/: __init__.py
common/agents/: __init__.py  auto_character.py  factory.py  orchestrator.py  schema.py
common/llm/: __init__.py  config.py  errors.py  load_balancer.py  manager.py  provider_client.py  types.py  usage_store.py
common/webapi/: __init__.py  dashboard_api.py
config/: agent_factory.yaml  llm_runtime.yaml  llm_urls.yaml
frontend/dashboard/: index.html  package-lock.json  package.json  vite.config.js
frontend/dashboard/src/: App.jsx  App.test.jsx  api.js  main.jsx  styles.css
frontend/dashboard/src/components/: CostTrendChart.jsx
frontend/dashboard/src/hooks/: usePollingQuery.js  usePollingQuery.test.jsx
scripts/: dev_up.py
skills/characters/: protagonist.md
tests/: test_agents_factory.py  test_agents_orchestrator.py  test_config.py  test_dashboard_api.py  test_load_balancer.py  test_manager_chat.py  test_manager_stream.py
